src/component/box_plot/snapshots/envision__component__box_plot__tests__snapshot_empty.snap
---
source: src/component/box_plot/tests.rs
expression: terminal.backend().to_string()
---
┌Empty Box Plot────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
