src/component/box_plot/snapshots/envision__component__box_plot__tests__snapshot_horizontal.snap
---
source: src/component/box_plot/tests.rs
expression: terminal.backend().to_string()
---
┌Horizontal Comparison─────────────────────────────────────┐
│                                                          │
│                                                          │
│                 |----------|-----------|                 │
│SvcA |-----------|          |           |----------|      │
│                 |----------|-----------|                 │
│                                                          │
│                                                          │
│                                                          │
│                      |-----------|----------|            │
│SvcB       |----------|           |          |-----------|│
│                      |-----------|----------|            │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
