src/component/box_plot/snapshots/envision__component__box_plot__tests__snapshot_multiple_vertical.snap
---
source: src/component/box_plot/tests.rs
expression: terminal.backend().to_string()
---
┌Service Comparison────────────────────────────────────────┐
│                                              ---         │
│                           ---                 |          │
│                            |                  |          │
│        ---                 |                  |          │
│         |                 ---                 |          │
│         |                 | |                 |          │
│        ---                | |                 |          │
│        | |                ===                ---         │
│        | |                | |                | |         │
│        ===                | |                | |         │
│        | |                ---                ===         │
│        | |                 |                 | |         │
│        ---                 |                 | |         │
│         |                 ---                ---         │
│         |                                     |          │
│        ---                                    |          │
│                                              ---         │
│       SvcA               SvcB               SvcC         │
└──────────────────────────────────────────────────────────┘
